Revision history for Perl extension Test::Apocalypse

* 0.11

	Added Test::Vars to the testsuite
	Added Test::Script to the testsuite
	More POD tweaks
	Bumped Test::NoPlan prereq to 0.0.4 so it works properly under Test::Block
	Bumped Test::Pod prereq to 1.41 so it doesn't complain about L<text|scheme> being invalid
	Bumped Test::Module::Used prereq to 0.1.9 so we can use excluded modules properly

* 0.10

	Added smart AUTOMATED_TESTING logic so we are now behaving in the same way as Alias envisaged
		This means certain tests are disabled when AUTOMATED is set :)
	Minor POD/Build.PL/test output tweaks
	Added META.json to FileChecks test
	Bumped Test::Strict prereq to 0.14 because now it works with Moose!
	Tweaked the module loading logic so we have less duplication now + less bugs, yay!
	Fixed a warning in the OutdatedPrereqs test so we don't cause FAILs with the Test::NoWarnings module :(
	Added Test::NoPlan to the testsuite
	Added debugging of test info, thanks POE::Test::Loops!

* 0.09

	Added the PERL_APOCALYPSE env var to override test selection and test all plugins
	Run the plugins in alphabetical order, which is prettier :)
	Removed the crappy stopwords addition in Pod_Spelling test
	Added Test::JSON::Meta to the testsuite

* 0.08

	Minor POD tweaks
	Added Test::Pod::No404s to the testsuite
	Fixed a warning in the PerlMetrics test so we don't cause FAILs with the Test::NoWarnings module :(

* 0.07

	Fixed a issue with META.yml quoting causing parse failures when using tools that depend on it
	Upgraded Module::Build to 0.3601, had to change prereq from '0.2.2' to '0.002002' to satisfy M::B::Compat :(

* 0.06

	Fixed OutdatedPrereqs test so it doesn't blow up on zero prereqs - thanks Ryan52!
	Added $@ to the module load failure output, for better debugging - thanks Ryan52!
	Minor POD tweaks
	Added more common terms to the Pod_Spelling test
	Added Test::NoBreakpoints to the testsuite
	Added Test::ConsistentVersion to the testsuite