@@ -5,9 +5,10 @@ Revision history for Perl extension Test::Apocalypse
 	Added Test::Vars to the testsuite
 	Added Test::Script to the testsuite
 	More POD tweaks
-	Bumped Test::NoPlan prereq to 0.0.4 so it works properly under Test::Block
+	Bumped Test::NoPlan prereq to 0.0.6 so it works properly under Test::Block
 	Bumped Test::Pod prereq to 1.41 so it doesn't complain about L<text|scheme> being invalid
 	Bumped Test::Module::Used prereq to 0.1.9 so we can use excluded modules properly
+	Added Pod::Coverage::TrustPod as the coverage class for Test::Pod::Coverage
 
 * 0.10
 
